# oxidra

./: .gitattributes  .gitignore  Cargo.toml  README.md  friction.md  install.ps1
.github/workflows/: ci.yml  release.yml
docs/: m4-m5-roadmap.md  oxidra-mvp.md
src/: agent.rs  auth.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  memory.rs  plugin.rs  process.rs  provider.rs  render.rs  session.rs  tools.rs  trust.rs  types.rs
tests/: e2e_cli.rs  plugin_stdio.rs
