[package]
name = "oxidra"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A lightweight, extensible CLI coding agent"
license = "MIT"
repository = "https://github.com/oxidra/oxidra"
readme = "README.md"
keywords = ["agent", "cli", "coding", "mcp"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
async-trait = "=0.1.88"
bytes = "=1.10.0"
chrono = { version = "=0.4.39", features = ["serde"] }
clap = { version = "=4.5.31", features = ["derive"] }
directories = "=6.0.0"
eventsource-stream = "=0.2.3"
fastrand = "=2.3.0"
fs2 = "=0.4.3"
futures-util = "=0.3.31"
hex = "=0.4.3"
reqwest = { version = "=0.12.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "=1.0.218", features = ["derive"] }
serde_json = "=1.0.139"
sha2 = "=0.10.8"
thiserror = "=2.0.11"
tokio = { version = "=1.43.0", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "=0.7.13", features = ["rt"] }
toml = "=0.8.23"
url = "=2.5.4"
uuid = { version = "=1.13.1", features = ["serde", "v7"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "=0.29.0", features = ["process", "signal"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "=0.59.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "=3.17.1"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
panic = "abort"
strip = "symbols"
